[package]
name = "sra_search"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.1"
serde = { version = "1.0.105", features = ["derive"] }
sourmash = "0.8.0"
structopt = "0.3.15"
serde_json = "1.0.56"
niffler = "2.2.0"
log = "0.4.8"
env_logger = "0.7.1"
